examples/test/testpolicy10820.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10820
  namespace: namespace184
spec:
  podSelector:
    matchLabels:
      key43: value37
      key7: value38
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value20
          key27: value14
          key41: value23
      podSelector:
        matchLabels:
          key40: value17
          key39: value31
